Fixed some styles issues on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,4 +363,7 @@ main {
     font-size: 2rem;
     text-align: center;
   }
+  .Icon {
+    font-size: 1.5rem;
+  }
 }
